--- a/demo1/index.html
+++ b/demo1/index.html
@@ -1,13 +1,31 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>动手实现一个网页加载进度loading</title>
+    <style>
+        .loading {
+            display: table;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #FFF;
+            z-index: 5;
+        }
+
+        .loading .progress {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-
+<div class="loading" id="loading">
+    <div class="progress" id="progress">0%</div>
+</div>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
