--- a/demo1/index.html
+++ b/demo1/index.html
@@ -1,30 +1,57 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>动手实现一个网页加载进度loading</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <style>
-        .loading {
-            display: table;
+        #loading {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #FFF;
-            z-index: 5;
+            height: 8px;
+            right: 0;
+            border-radius: 5px;
+            overflow: hidden;
         }
 
-        .loading .progress {
-            display: table-cell;
-            vertical-align: middle;
-            text-align: center;
+        #progress {
+            position: absolute;
+            left: 0;
+            border-radius: 5px;
+            overflow: hidden;
+            height: 100%;
+            background-color: #2085C5;
+            width: 0;
+            transition: .3s;
+        }
+        .progress-hide{
+            opacity: 0;
         }
     </style>
+    <script>var loadStartTime = new Date().getTime();</script>
 </head>
 <body>
 <div class="loading" id="loading">
-    <div class="progress" id="progress">0%</div>
+    <div class="progress" id="progress"></div>
 </div>
+<img src="https://ss2.baidu.com/6ONYsjip0QIZ8tyhnq/it/u=4136376869,3527986770&fm=58&bpow=484&bpoh=473" alt="">
+<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1524919127094&di=685b3c443e3903f848ff67941b8a3183&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F010f2a5944bc9ba8012193a3190f53.jpg%402o.jpg"
+     alt="">
+<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1524919128767&di=78dfa46915414559187607d21e8310b8&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F15%2F14%2F92%2F58M58PICRVr_1024.jpg"
+     alt="">
+<img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG" alt="">
+<img src="http://streetwill.co/uploads/post/photo/718/show_D6ShkjuHtnDu8jomoIYgcBfMtVKCNY0X0IG5eEikhoE.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/699/show_V8VqvB8tCTKyMqQdL7l5WR993L2sWX9BsVBX9iOCF9k.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/705/show_LZXJ0OE9XgUg_QVlTV_JaKk67qOz63TO-HP9l6UFCWQ.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/709/show_u2Mjljpyd_jSkg1dioqxvg9kBcgPc6rmEFkTf_3X_Mg.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/708/show_QlJPFwskLJ_7DHyiUhtHxE7cgeuZA4mwA9oYDKpLwBQ.JPG" alt="">
+<img src="http://streetwill.co/uploads/post/photo/707/show_F8oNfhyOZ154bje-8e6aqav-Md20p6vUWKH7nmB7PrU.jpg" alt="">
+<img src="http://streetwill.co/uploads/post/photo/699/show_V8VqvB8tCTKyMqQdL7l5WR993L2sWX9BsVBX9iOCF9k.jpg" alt="">
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="index.js"></script>
 </body>
