--- a/demo1/index.html
+++ b/demo1/index.html
@@ -27,11 +27,11 @@
             width: 0;
             transition: .3s;
         }
-        .progress-hide{
+
+        .progress-hide {
             opacity: 0;
         }
     </style>
-    <script>var loadStartTime = new Date().getTime();</script>
 </head>
 <body>
 <div class="loading" id="loading">
@@ -53,6 +53,7 @@
 <img src="http://streetwill.co/uploads/post/photo/707/show_F8oNfhyOZ154bje-8e6aqav-Md20p6vUWKH7nmB7PrU.jpg" alt="">
 <img src="http://streetwill.co/uploads/post/photo/699/show_V8VqvB8tCTKyMqQdL7l5WR993L2sWX9BsVBX9iOCF9k.jpg" alt="">
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="loading.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
