--- a/demo3/index.html
+++ b/demo3/index.html
@@ -23,49 +23,18 @@
 </head>
 <body>
 <div class="active-entrance">
-    <div class="entrance-title weui-flex vertical">
-        <img src="{CDN}v1/img/activity-entrance-img.png" alt="">
-        <span class="weui-flex__item">优惠活动</span>
-    </div>
     <div class="swiper-wrapper">
         <a class="swiper-slide entrance-slide" href="/0731cs/g/65pvxyo85g/">
-            <div class="entrance-right">
-                <div class="entrance-main">
-                    <p>1元购买当地特产</p>
-                    <span>葫芦娃</span>
-                    <div class="entrance-price-wrap">
-                        <span>￥1</span>
-                        <del>￥50</del>
-                    </div>
-                </div>
-            </div>
-            <img class="left-img" src="/static/v1/img/icon-shop.png" alt="哈哈哈">
+            <img src="http://pic.people.com.cn/NMediaFile/2018/0502/MAIN201805021528000542544420820.jpg" alt="">
         </a>
         <a class="swiper-slide entrance-slide" href="/0731cs/g/65pvxyo85g/">
-            <div class="entrance-right">
-                <div class="entrance-main">
-                    <p>2元购买当地特产</p>
-                    <span>葫芦娃</span>
-                    <div class="entrance-price-wrap">
-                        <span>￥1</span>
-                        <del>￥50</del>
-                    </div>
-                </div>
-            </div>
-            <img class="left-img" src="/static/v1/img/icon-shop.png" alt="哈哈哈">
+            <img src="http://pic.people.com.cn/NMediaFile/2018/0502/MAIN201805021528000542544420820.jpg" alt="">
         </a>
         <a class="swiper-slide entrance-slide" href="/0731cs/g/65pvxyo85g/">
-            <div class="entrance-right">
-                <div class="entrance-main">
-                    <p>3元购买当地特产</p>
-                    <span>葫芦娃</span>
-                    <div class="entrance-price-wrap">
-                        <span>￥1</span>
-                        <del>￥50</del>
-                    </div>
-                </div>
-            </div>
-            <img class="left-img" src="/static/v1/img/icon-shop.png" alt="哈哈哈">
+            <img src="http://pic.people.com.cn/NMediaFile/2018/0502/MAIN201805021528000542544420820.jpg" alt="">
+        </a>
+        <a class="swiper-slide entrance-slide" href="/0731cs/g/65pvxyo85g/">
+            <img src="http://pic.people.com.cn/NMediaFile/2018/0502/MAIN201805021528000542544420820.jpg" alt="">
         </a>
     </div>
 </div>
