--- a/demo3/index.html
+++ b/demo3/index.html
@@ -7,9 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>轮播</title>
     <style>
+        html,body{
+            overflow-x:hidden ;
+        }
         * {
             padding: 0;
             margin: 0;
+        }
+        .swiper0{
+            height: 150px;
+        }
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            color: #fff;
         }
 
         .swiper0, .swiper1, .swiper2 {
@@ -21,6 +33,7 @@
             width: 100%;
             position: relative;
             top: 50%;
+            cursor: pointer;
             transform: translateY(-50%);
         }
     </style>
@@ -29,15 +42,20 @@
 
 <div class="swiper0">
     <div class="slide0">
-        <img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"
-             alt="">
+        <a href="http://www.baidu.com/1">
+            111111111111111111111
+        </a>
     </div>
     <div class="slide0">
-        <img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"
-             alt=""></div>
+        <a href="http://www.baidu.com/2">
+            222222222222222222222222
+        </a>
+    </div>
     <div class="slide0">
-        <img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"
-             alt=""></div>
+        <a href="http://www.baidu.com/3">
+            333333333333333333
+        </a>
+    </div>
 </div>
 
 <div class="swiper1">
