change demo3 css

--- a/demo3/index.html
+++ b/demo3/index.html
@@ -26,7 +26,7 @@
             height: 100%;
             /*color: #FFF;*/
             overflow: hidden;
-            /*margin: 0 10px;*/
+            margin: 0 10px;
         }
 
         .swiper0, .swiper1, .swiper2 {
@@ -97,31 +97,31 @@
     </div>
 </div>
 
-<!--<div class="swiper1">-->
-<!--<div class="slide1">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"-->
-<!--alt="">-->
-<!--</div>-->
-<!--<div class="slide1">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"-->
-<!--alt=""></div>-->
-<!--<div class="slide1">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"-->
-<!--alt=""></div>-->
-<!--</div>-->
+<div class="swiper1">
+    <div class="slide1">
+        <img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"
+             alt="">
+    </div>
+    <div class="slide1">
+        <img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"
+             alt=""></div>
+    <div class="slide1">
+        <img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"
+             alt=""></div>
+</div>
 
-<!--<div class="swiper2">-->
-<!--<div class="slide2">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"-->
-<!--alt="">-->
-<!--</div>-->
-<!--<div class="slide2">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"-->
-<!--alt=""></div>-->
-<!--<div class="slide2">-->
-<!--<img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"-->
-<!--alt=""></div>-->
-<!--</div>-->
+<div class="swiper2">
+    <div class="slide2">
+        <img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"
+             alt="">
+    </div>
+    <div class="slide2">
+        <img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"
+             alt=""></div>
+    <div class="slide2">
+        <img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"
+             alt=""></div>
+</div>
 <script src="../lib/zepto.js"></script>
 <script src="zepto.carousel.js"></script>
 <script src="index.js"></script>
