--- a/demo2/index.html
+++ b/demo2/index.html
@@ -1,86 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>canvas抽奖转盘</title>
+    <title>Canvas简单圆形进度条Loading代码</title>
     <style>
-        #canvas {
-            height: 200px;
-            width: 200px;
-            transform-origin: 50% 50%;
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            text-align: center;
+            background-color: #0CC;
         }
     </style>
+
 </head>
+
 <body>
-<canvas id="canvas" width="400" height="400"></canvas>
+<canvas id="canvas" width="300" height="500" style="background:#0CC;"></canvas>
 <script>
-    var num    = 6;   // 奖品数量
-    var canvas = document.getElementById('canvas');
-    if (!canvas.getContext) {
-        alert('抱歉！浏览器不支持。');
-    }
-    // canvas开始绘图
-    var ctx = canvas.getContext('2d');
-    ctx.beginPath();
-    // 位移到圆心，下面需要围绕圆心旋转
-    ctx.translate(200, 200);
-    ctx.arc(0, 0, 200, 2 * Math.PI, 0);
-    ctx.stroke();
-    for (var i = 0; i < num; i++) {
-        // 保存当前状态
-        ctx.save();
-        // 开始一条新路径
-        ctx.beginPath();
-        // 从(0, 0)坐标开始定义一条新的子路径
-        ctx.moveTo(0, 0);
-        // 旋转弧度,需将角度转换为弧度,使用 degrees * Math.PI/180 公式进行计算。
-        ctx.rotate((360 / num * i + 360 / num / 2) * Math.PI / 180);
-        // 绘制圆弧
-        ctx.arc(0, 0, 200, 0, 2 * Math.PI / num, false);
-        if (i % 2 == 0) {
-            ctx.fillStyle = '#b0e0e6';
-        } else {
-            ctx.fillStyle = '#e4c6d0';
-        }
-        // 填充扇形
-        ctx.fill();
-        // 绘制边框
-        ctx.lineWidth   = 0.5;
-        ctx.strokeStyle = '#b0e0e6';
-        ctx.stroke();
-
-        // 文字
-        ctx.fillStyle = '#fff';
-        ctx.font      = "18px sans-serif";
-        if (i == 0) {
-            ctx.fillText('六元红包', 55, 55);
-        }
-        if (i == 1) {
-            ctx.fillText('没红包', 47, 50);
-        }
-        if (i == 2) {
-            ctx.fillText('流量大赠送', 40, 47);
-        }
-        if (i == 3) {
-            ctx.fillText('谢谢惠顾', 55, 55);
-        }
-        if (i == 4) {
-            ctx.fillText('送个人给你', 40, 47);
-        }
-        if (i == 5) {
-            ctx.fillText('啥玩意', 55, 55);
+    window.onload = function () {
+        var canvas  = document.getElementById('canvas'),  //获取canvas元素
+            context = canvas.getContext('2d'),  //获取画图环境，指明为2d
+            centerX = canvas.width / 2,   //Canvas中心点x轴坐标
+            centerY = canvas.height / 2,  //Canvas中心点y轴坐标
+            rad     = Math.PI * 2 / 100, //将360度分成100份，那么每一份就是rad度
+            speed   = 0.1; //加载的快慢就靠它了
+        //绘制蓝色外圈
+        function blueCircle(n) {
+            context.save();
+            context.strokeStyle = "#fff"; //设置描边样式
+            context.lineWidth   = 5; //设置线宽
+            context.beginPath(); //路径开始
+            context.arc(centerX, centerY, 100, -Math.PI / 2, -Math.PI / 2 + n * rad, false); //用于绘制圆弧context.arc(x坐标，y坐标，半径，起始角度，终止角度，顺时针/逆时针)
+            context.stroke(); //绘制
+            context.closePath(); //路径结束
+            context.restore();
         }
 
-        // 恢复前一个状态
-        ctx.restore();
+        //绘制白色外圈
+        function whiteCircle() {
+            context.save();
+            context.beginPath();
+            context.strokeStyle = "white";
+            context.arc(centerX, centerY, 100, 0, Math.PI * 2, false);
+            context.stroke();
+            context.closePath();
+            context.restore();
+        }
+
+        //百分比文字绘制
+        function text(n) {
+            context.save(); //save和restore可以保证样式属性只运用于该段canvas元素
+            context.strokeStyle = "#fff"; //设置描边样式
+            context.font        = "40px Arial"; //设置字体大小和字体
+            //绘制字体，并且指定位置
+            context.strokeText(n.toFixed(0) + "%", centerX - 25, centerY + 10);
+            context.stroke(); //执行绘制
+            context.restore();
+        }
+
+        var a = 0;
+        //动画循环
+        (function drawFrame() {
+            a = window.requestAnimationFrame(drawFrame);
+            context.clearRect(0, 0, canvas.width, canvas.height);
+            whiteCircle();
+            text(speed);
+            blueCircle(speed);
+            speed += ((Math.random() / 2) > 0.5) ? Math.random() / 10000 : Math.random() / 50;
+        }());
+
+        setTimeout(function () {
+            console.log(1);
+            window.cancelAnimationFrame(a);
+        }, 5000);
     }
-    // js实现匀速转动5圈，随后加速，再减速
-    setTimeout(function () {
-        canvas.style.cssText = 'transition:all 6s ease-out;transform:rotate(2780deg);';
-    }, (Math.random() + 2) * 1000);
 </script>
 </body>
+
 </html>
