--- a/demo5/index.html
+++ b/demo5/index.html
@@ -12,7 +12,7 @@
             margin: 0;
         }
 
-        html, body {
+        html {
             overflow-x: hidden;
         }
 
@@ -48,13 +48,14 @@
     </style>
 </head>
 <body>
-<div class="main">
-    <img src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
+<div>
+    <p>这里是页面内容啥的</p>
+</div>
+<img src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt="">
-</div>
 <script src="../lib/zepto.js"></script>
 <script src="zepto.pullToRefresh.js"></script>
 <script src="index.js"></script>
