--- a/demo3/index.html
+++ b/demo3/index.html
@@ -62,7 +62,10 @@
     </div>
     <div class="slide0">
         <a href="http://www.baidu.com/2">
-            <p>asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf </p>
+            <p>asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf
+                asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf
+                asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf
+                asdfadsf dsf dsf dsf dsf asdfadsf dsf dsf dsf dsf </p>
         </a>
     </div>
     <div class="slide0">
@@ -99,28 +102,24 @@
 
 <div class="swiper1">
     <div class="slide1">
-        <img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"
-             alt="">
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt="">
     </div>
     <div class="slide1">
-        <img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"
-             alt=""></div>
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt=""></div>
     <div class="slide1">
-        <img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"
-             alt=""></div>
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt=""></div>
 </div>
 
 <div class="swiper2">
     <div class="slide2">
-        <img src="http://streetwill.co/uploads/post/photo/738/show_kFs0yo9h0DOhyKKeeRhI6WDhnSuzw8KrcQ59G1iz_pg.jpg"
-             alt="">
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt="">
     </div>
     <div class="slide2">
-        <img src="http://streetwill.co/uploads/post/photo/659/show_RWAy4NXsFyKffsrD6uLliS-d78nrC90zXJtmkZ_aV3g.jpg"
-             alt=""></div>
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt="">
+    </div>
     <div class="slide2">
-        <img src="http://streetwill.co/uploads/post/photo/712/show_J4bkRVj48GNacMELdZMj4IkUNO1YFsFlgkcMpmU8qqA.JPG"
-             alt=""></div>
+        <img src="http://img2.imgtn.bdimg.com/it/u=3588772980,2454248748&fm=27&gp=0.jpg" alt="">
+    </div>
 </div>
 <script src="../lib/zepto.js"></script>
 <script src="zepto.carousel.js"></script>
