--- a/demo2/index.html
+++ b/demo2/index.html
@@ -1,83 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Canvas简单圆形进度条Loading代码</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            text-align: center;
-            background-color: #0CC;
-        }
+        ul { list-style: none; }
+        .lottery { position: relative; width: 184px; height: 184px; line-height: 58px; text-align: center; overflow: hidden; margin: 0 auto; }
+        .lottery li, .lottery .btn { position: absolute; width: 60px; height: 60px; border: 1px #ccc solid; z-index: 1; }
+        .lottery .item-1 { top: 0; left: 0; }
+        .lottery .item-2 { top: 0; left: 61px; }
+        .lottery .item-3 { top: 0; left: 122px; }
+        .lottery .item-4 { top: 61px; left: 122px; }
+        .lottery .item-5 { top: 122px; left: 122px; }
+        .lottery .item-6 { top: 122px; left: 61px; }
+        .lottery .item-7 { top: 122px; left: 0; }
+        .lottery .item-8 { top: 61px; left: 0; }
+        .lottery .active { border-color: red; z-index: 2; }
+        .lottery .btn { width: 62px; height: 62px; top: 61px; left: 61px; background-color: transparent; cursor: pointer; }
     </style>
-
 </head>
-
 <body>
-<canvas id="canvas" width="300" height="500" style="background:#0CC;"></canvas>
-<script>
-    window.onload = function () {
-        var canvas  = document.getElementById('canvas'),  //获取canvas元素
-            context = canvas.getContext('2d'),  //获取画图环境，指明为2d
-            centerX = canvas.width / 2,   //Canvas中心点x轴坐标
-            centerY = canvas.height / 2,  //Canvas中心点y轴坐标
-            rad     = Math.PI * 2 / 100, //将360度分成100份，那么每一份就是rad度
-            speed   = 0.1; //加载的快慢就靠它了
-        //绘制蓝色外圈
-        function blueCircle(n) {
-            context.save();
-            context.strokeStyle = "#fff"; //设置描边样式
-            context.lineWidth   = 5; //设置线宽
-            context.beginPath(); //路径开始
-            context.arc(centerX, centerY, 100, -Math.PI / 2, -Math.PI / 2 + n * rad, false); //用于绘制圆弧context.arc(x坐标，y坐标，半径，起始角度，终止角度，顺时针/逆时针)
-            context.stroke(); //绘制
-            context.closePath(); //路径结束
-            context.restore();
-        }
-
-        //绘制白色外圈
-        function whiteCircle() {
-            context.save();
-            context.beginPath();
-            context.strokeStyle = "white";
-            context.arc(centerX, centerY, 100, 0, Math.PI * 2, false);
-            context.stroke();
-            context.closePath();
-            context.restore();
-        }
-
-        //百分比文字绘制
-        function text(n) {
-            context.save(); //save和restore可以保证样式属性只运用于该段canvas元素
-            context.strokeStyle = "#fff"; //设置描边样式
-            context.font        = "40px Arial"; //设置字体大小和字体
-            //绘制字体，并且指定位置
-            context.strokeText(n.toFixed(0) + "%", centerX - 25, centerY + 10);
-            context.stroke(); //执行绘制
-            context.restore();
-        }
-
-        var a = 0;
-        //动画循环
-        (function drawFrame() {
-            a = window.requestAnimationFrame(drawFrame);
-            context.clearRect(0, 0, canvas.width, canvas.height);
-            whiteCircle();
-            text(speed);
-            blueCircle(speed);
-            speed += ((Math.random() / 2) > 0.5) ? Math.random() / 10000 : Math.random() / 50;
-        }());
-
-        setTimeout(function () {
-            console.log(1);
-            window.cancelAnimationFrame(a);
-        }, 5000);
-    }
-</script>
+<div class="lottery">
+    <ul class="list">
+        <li class="item-1 active">1</li>
+        <li class="item-2">2</li>
+        <li class="item-3">3</li>
+        <li class="item-4">4</li>
+        <li class="item-5">5</li>
+        <li class="item-6">6</li>
+        <li class="item-7">7</li>
+        <li class="item-8">8</li>
+    </ul>
+    <button class="btn">抽奖</button>
+</div>
+<script src="../lib/zepto.js"></script>
+<script src="zepto.luckDraw.js"></script>
+<script src="index.js"></script>
 </body>
-
 </html>
