--- a/demo10/index.html
+++ b/demo10/index.html
@@ -7,50 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        svg {
-            width: 500px;
-            height: 500px;
-            /*background: #000;*/
+        * {
+            padding: 0;
+            margin: 0;
         }
     </style>
 </head>
 <body>
-<svg>
-    <polygon points="250,100 400,200 330,380 180,400 100,150" style="fill:#A4DAFF; stroke:#73A7FE; stroke-width:2"></polygon>
-    <g fill="none" stroke="#8dc0e3" stroke-width="1">
-        <path stroke-dasharray="5,5" d="M250,100 250,250"/>
-        <path stroke-dasharray="5,5" d="M400,200 250,250"/>
-        <path stroke-dasharray="5,5" d="M330,380 250,250"/>
-        <path stroke-dasharray="5,5" d="M180,400 250,250"/>
-        <path stroke-dasharray="5,5" d="M100,150 250,250"/>
-        <circle cx="250" cy="100" r="2" stroke="black" stroke-width="2" fill="#fff"/>
-        <circle cx="400" cy="200" r="2" stroke="black" stroke-width="2" fill="#fff"/>
-        <circle cx="330" cy="380" r="2" stroke="black" stroke-width="2" fill="#fff"/>
-        <circle cx="180" cy="400" r="2" stroke="black" stroke-width="2" fill="#fff"/>
-        <circle cx="100" cy="150" r="2" stroke="black" stroke-width="2" fill="#fff"/>
-    </g>
-    <g>
-        <text style="fill:black;">
-            <tspan x="230" y="40" style="font-size:20px">流量</tspan>
-            <tspan style="fill:#999;" x="230" y="68">第3名</tspan>
-        </text>
-        <text style="fill:black;">
-            <tspan x="440" y="180" style="font-size:20px">发布</tspan>
-            <tspan style="fill:#999;" x="440" y="206">第5名</tspan>
-        </text>
-        <text style="fill:black;">
-            <tspan x="410" y="430" style="font-size:20px">收入</tspan>
-            <tspan style="fill:#999;" x="395" y="456">第355名</tspan>
-        </text>
-        <text style="fill:black;">
-            <tspan x="90" y="420" style="font-size:20px">商户</tspan>
-            <tspan style="fill:#999;" x="80" y="446">第399名</tspan>
-        </text>
-        <text style="fill:black;">
-            <tspan x="30" y="130" style="font-size:20px">用户</tspan>
-            <tspan style="fill:#999;" x="30" y="158">第1名</tspan>
-        </text>
-    </g>
-</svg>
+<script src="../lib/zepto.js"></script>
+<script src="draw.svg.js"></script>
+<script src="index.js?4"></script>
 </body>
 </html>
