--- a/demo3/index.html
+++ b/demo3/index.html
@@ -50,10 +50,39 @@
             cursor: pointer;
             transform: translateY(-50%);
         }
+
+        .swiper-wrapper {
+            width: 500px;
+        }
+
+        .swiper-wrapper .img {
+            display: flex;
+            align-items: center;
+        }
+
+        .swiper-wrapper img {
+            max-width: 100%;
+        }
     </style>
 </head>
 <body>
-
+<div class="swiper-wrapper">
+    <div class="img">
+        <img src="https://c1.zcimg.com/static/up/32/4h9jo.jpg" alt="">
+    </div>
+    <div class="img">
+        <img src="https://c1.zcimg.com/static/up/32/4h9jo.jpg" alt="">
+    </div>
+    <div class="img">
+        <img src="https://c1.zcimg.com/static/up/35/4h9jr.jpg" alt="">
+    </div>
+    <div class="img">
+        <img src="https://c1.zcimg.com/static/up/5x/4h9lg.gif" alt="">
+    </div>
+    <div class="img">
+        <img src="https://c1.zcimg.com/static/up/5e/4h9m0.gif" alt="">
+    </div>
+</div>
 <div class="swiper0">
     <div class="slide0">
         <a href="http://www.baidu.com/1">
