--- a/demo10/index.html
+++ b/demo10/index.html
@@ -11,11 +11,18 @@
             padding: 0;
             margin: 0;
         }
+        .text{
+            background: #000;
+        }
     </style>
 </head>
 <body>
+<div class="text">
+
+</div>
 <script src="../lib/zepto.js"></script>
-<script src="draw.svg.js"></script>
+<script src="html2canvas.js"></script>
+<script src="svg.radar.js"></script>
 <script src="index.js?4"></script>
 </body>
 </html>
