--- a/demo5/index.html
+++ b/demo5/index.html
@@ -57,7 +57,7 @@
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt=""><img
         src="http://pic2.sc.chinaz.com/files/pic/pic9/201804/zzpic11491.jpg" alt="">
 <script src="../lib/zepto.js"></script>
-<script src="zepto.pullToRefresh.js"></script>
+<script src="zepto.pull2refresh.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
